# siftfy-python

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/scripts/: license_metadata_audit.py  readme_audit.py  workflow_audit.py
.github/workflows/: ci.yml  oss-compliance.yml  publish.yml
src/siftfy/: __init__.py  _internal.py  async_client.py  client.py  exceptions.py  models.py
tests/: test_async_client.py  test_client.py
