[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "siftfy"
version = "0.1.1"
description = "Official Python client for the Siftfy spam-classification API."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Siftfy", email = "hi@siftfy.io" }]
keywords = [
    "spam",
    "spam-api",
    "spam-detection",
    "spam-classification",
    "spam-classifier",
    "spam-filter",
    "antispam",
    "moderation",
    "content-moderation",
    "text-classification",
    "contact-forms",
    "api-client",
    "fastapi",
    "django",
    "siftfy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email :: Filters",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25",
]

[project.urls]
Homepage = "https://siftfy.io"
Documentation = "https://siftfy.io/docs"
Examples = "https://siftfy.io/examples"
Tools = "https://siftfy.io/tools"
Pricing = "https://siftfy.io/pricing"
Source = "https://github.com/siftfy/siftfy-python"
Issues = "https://github.com/siftfy/siftfy-python/issues"
Changelog = "https://github.com/siftfy/siftfy-python/releases"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/siftfy"]

[tool.hatch.build.targets.sdist]
include = ["src/siftfy", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.9"
strict = true
files = ["src/siftfy"]
